--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "babel-preset-es2015": "^6.24.1",
     "jest": "^22.0.6",
     "regenerator-runtime": "^0.11.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.3.1",
+    "postcss-cli": "^6.0.1"
   }
 }
