--- a/homeworks/week11/package.json
+++ b/homeworks/week11/package.json
@@ -7,8 +7,8 @@
     "express": "^4.16.4",
     "mysql2": "^1.6.1",
     "pug": "^2.0.3",
-    "sequelize": "^4.41.0"
+    "sequelize": "^4.41.0",
+    "sequelize-cli": "^5.2.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
