--- a/homeworks/week11/package.json
+++ b/homeworks/week11/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
+    "moment": "^2.22.2",
     "mysql2": "^1.6.1",
     "pug": "^2.0.3",
     "sequelize": "^4.41.0",
