--- a/homeworks/week11/package.json
+++ b/homeworks/week11/package.json
@@ -5,8 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "moment": "^2.22.2",
     "mysql2": "^1.6.1",
+    "passport": "^0.4.0",
     "pug": "^2.0.3",
     "sequelize": "^4.41.0",
     "sequelize-cli": "^5.2.0"
