--- a/homeworks/week11/package.json
+++ b/homeworks/week11/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "moment": "^2.22.2",
